# WinImmImeSample

./: CCompWnd.cpp  CCompWnd.h  CMakeLists.txt  CStatusWnd.cpp  CStatusWnd.h  Comp.cpp  Comp.h  ImcHandle.cpp  ImcHandle.h  ImeBaseWnd.h  Imm.h  README.md  UIWnd.cpp  UIWnd.h  XXIme.rc  build.cmd  dllmain.cpp  imm.cpp  imm.def  installer.cpp  resource.h
